iptableslist.txt
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Oct  3 17:41:57 2025
*raw
:PREROUTING ACCEPT [2999:265790]
:OUTPUT ACCEPT [2810:254722]
-A PREROUTING -p sctp -m sctp --dport 32222 -j TRACE
-A PREROUTING -d 192.168.49.2/32 ! -i br-0defdf22e833 -j DROP
-A PREROUTING -d 127.0.0.1/32 ! -i lo -p tcp -m tcp --dport 32773 -j DROP
-A PREROUTING -d 192.168.49.2/32 ! -i br-f9e3167bd605 -j DROP
-A PREROUTING -d 172.17.0.2/32 ! -i docker0 -j DROP
-A PREROUTING -d 192.168.49.2/32 ! -i br-ae399d41b2eb -j DROP
-A PREROUTING -d 127.0.0.1/32 ! -i lo -p tcp -m tcp --dport 32774 -j DROP
-A PREROUTING -d 127.0.0.1/32 ! -i lo -p tcp -m tcp --dport 32775 -j DROP
-A PREROUTING -d 127.0.0.1/32 ! -i lo -p tcp -m tcp --dport 32776 -j DROP
-A PREROUTING -d 127.0.0.1/32 ! -i lo -p tcp -m tcp --dport 32777 -j DROP
-A PREROUTING -d 172.17.0.3/32 ! -i docker0 -j DROP
COMMIT
# Completed on Fri Oct  3 17:41:57 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Oct  3 17:41:57 2025
*filter
:INPUT ACCEPT [2990:264497]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [2809:254634]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -d 192.168.49.2/32 -p sctp -m sctp --dport 32222 -j ACCEPT
-A FORWARD -s 192.168.49.2/32 -p sctp -m sctp --sport 32222 -j ACCEPT
-A FORWARD -s 192.168.49.2/32 -p sctp -m sctp --sport 32222 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.49.2/32 -p sctp -m sctp --dport 32222 -m conntrack --ctstate NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.49.2/32 -p sctp -m sctp --sport 32222 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.49.2/32 -p sctp -m sctp --dport 32222 -m conntrack --ctstate NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A FORWARD -s 192.168.49.2/32 -p sctp -m sctp --sport 32222 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.49.2/32 -p sctp -m sctp --dport 32222 -m conntrack --ctstate NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.49.2/32 -i br-562d84cbd8aa -o ens18 -p sctp -m sctp --sport 32222 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.49.2/32 -i ens18 -o br-562d84cbd8aa -p sctp -m sctp --dport 32222 -m conntrack --ctstate NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.49.2/32 -p sctp -m sctp --sport 32222 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 192.168.49.2/32 -p sctp -m sctp --dport 32222 -j ACCEPT
-A FORWARD -s 192.168.49.2/32 -p sctp -m sctp --sport 32222 -j ACCEPT
-A DOCKER -d 172.17.0.3/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 192.168.49.2/32 ! -i br-ae399d41b2eb -o br-ae399d41b2eb -p tcp -m tcp --dport 32443 -j ACCEPT
-A DOCKER -d 192.168.49.2/32 ! -i br-ae399d41b2eb -o br-ae399d41b2eb -p tcp -m tcp --dport 8443 -j ACCEPT
-A DOCKER -d 192.168.49.2/32 ! -i br-ae399d41b2eb -o br-ae399d41b2eb -p tcp -m tcp --dport 5000 -j ACCEPT
-A DOCKER -d 192.168.49.2/32 ! -i br-ae399d41b2eb -o br-ae399d41b2eb -p tcp -m tcp --dport 2376 -j ACCEPT
-A DOCKER -d 192.168.49.2/32 ! -i br-ae399d41b2eb -o br-ae399d41b2eb -p tcp -m tcp --dport 22 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 5000 -j ACCEPT
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER ! -i br-ae399d41b2eb -o br-ae399d41b2eb -j DROP
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-BRIDGE -o br-ae399d41b2eb -j DOCKER
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-ae399d41b2eb -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-ISOLATION-STAGE-1
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-FORWARD -i br-ae399d41b2eb -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-ae399d41b2eb ! -o br-ae399d41b2eb -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-2 -o br-ae399d41b2eb -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-USER -s 192.168.49.2/32 -p sctp -m sctp --sport 32222 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-USER -d 192.168.49.2/32 -p sctp -m sctp --dport 32222 -j ACCEPT
-A DOCKER-USER -s 192.168.49.2/32 -p sctp -m sctp --sport 32222 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-USER -d 192.168.49.2/32 -p sctp -m sctp --dport 32222 -j ACCEPT
COMMIT
# Completed on Fri Oct  3 17:41:57 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Oct  3 17:41:57 2025
*nat
:PREROUTING ACCEPT [5:768]
:INPUT ACCEPT [4:695]
:OUTPUT ACCEPT [155:10986]
:POSTROUTING ACCEPT [155:10986]
:DOCKER - [0:0]
-A PREROUTING -d 192.168.17.70/32 -i ens18 -p sctp -m sctp --dport 32222 -j DNAT --to-destination 192.168.49.2:32222
-A PREROUTING -d 172.17.0.1/32 -i ens18 -p sctp -m sctp --dport 32222 -j DNAT --to-destination 192.168.49.2:32222
-A PREROUTING -d 192.168.17.70/32 -i ens18 -p sctp -m sctp --dport 32222 -j DNAT --to-destination 192.168.49.2:32222
-A PREROUTING -d 192.168.17.70/32 -i ens18 -p sctp -m sctp --dport 32222 -j DNAT --to-destination 192.168.49.2:32222
-A PREROUTING -d 192.168.17.70/32 -i ens18 -p sctp -m sctp --dport 32222 -j DNAT --to-destination 192.168.49.2:32222
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -d 192.168.49.2/32 -p sctp -m sctp --dport 32222 -j MASQUERADE
-A POSTROUTING -s 192.168.49.0/24 ! -o br-ae399d41b2eb -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -d 192.168.49.2/32 -p sctp -m sctp --dport 32222 -j MASQUERADE
-A POSTROUTING -s 192.168.49.0/24 ! -o br-f9e3167bd605 -j MASQUERADE
-A POSTROUTING -s 192.168.49.0/24 ! -o br-0defdf22e833 -j MASQUERADE
-A POSTROUTING -d 192.168.49.2/32 -p sctp -m sctp --dport 32222 -j MASQUERADE
-A DOCKER -i br-ae399d41b2eb -j RETURN
-A DOCKER -i docker0 -j RETURN
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 5000 -j DNAT --to-destination 172.17.0.2:5000
-A DOCKER -d 127.0.0.1/32 ! -i br-ae399d41b2eb -p tcp -m tcp --dport 32773 -j DNAT --to-destination 192.168.49.2:22
-A DOCKER -d 127.0.0.1/32 ! -i br-ae399d41b2eb -p tcp -m tcp --dport 32774 -j DNAT --to-destination 192.168.49.2:2376
-A DOCKER -d 127.0.0.1/32 ! -i br-ae399d41b2eb -p tcp -m tcp --dport 32775 -j DNAT --to-destination 192.168.49.2:5000
-A DOCKER -d 127.0.0.1/32 ! -i br-ae399d41b2eb -p tcp -m tcp --dport 32776 -j DNAT --to-destination 192.168.49.2:8443
-A DOCKER -d 127.0.0.1/32 ! -i br-ae399d41b2eb -p tcp -m tcp --dport 32777 -j DNAT --to-destination 192.168.49.2:32443
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 8090 -j DNAT --to-destination 172.17.0.3:8080
COMMIT
# Completed on Fri Oct  3 17:41:57 2025
